Package_Tools/include-C/ode/h/collision.h

/* ************************************************************************ */
/* utility functions */

extern void dClosestLineSegmentPoints (const dVector3 a1, const dVector3 a2,
				const dVector3 b1, const dVector3 b2,
				dVector3 cp1, dVector3 cp2);
extern int dBoxTouchesBox (const dVector3 _p1, const dMatrix3 R1,
		    const dVector3 side1, const dVector3 _p2,
		    const dMatrix3 R2, const dVector3 side2);
/* The meaning of flags parameter is the same as in dCollide()*/
extern int dBoxBox (const dVector3 p1, const dMatrix3 R1,
	     const dVector3 side1, const dVector3 p2,
	     const dMatrix3 R2, const dVector3 side2,
	     dVector3 normal, dReal *depth, int *return_code,
	     int flags, dContactGeom *contact, int skip);
extern void dInfiniteAABB (dGeomID geom, dReal aabb[6]);
typedef int (*dColliderFn) (dGeomID o1, dGeomID o2,
			 int flags, dContactGeom *contact, int skip);
typedef struct dGeomClass {
  int bytes;
  dGetColliderFnFn *collider;
  dGetAABBFn *aabb;
  dAABBTestFn *aabb_test;
  dGeomDtorFn *dtor;
} dGeomClass;
extern int dCreateGeomClass (const dGeomClass *classptr);
extern void * dGeomGetClassData (dGeomID);
extern dGeomID dCreateGeom (int classnum);
/**
 * @brief Sets a custom collider function for two geom classes. 
 *
 * @param i The first geom class handled by this collider
 * @param j The second geom class handled by this collider
 * @param fn The collider function to use to determine collisions.
 * @ingroup collide
 */
extern void dSetColliderOverride (int i, int j, dColliderFn *fn);