Packages_2024/ode_0.16.2/ode/collision.inc


procedure dClosestLineSegmentPoints(a1: TdVector3; a2: TdVector3; b1: TdVector3; b2: TdVector3; cp1: TdVector3;
  cp2: TdVector3); cdecl; external libodes;
function dBoxTouchesBox(_p1: TdVector3; R1: TdMatrix3; side1: TdVector3; _p2: TdVector3; R2: TdMatrix3;
  side2: TdVector3): longint; cdecl; external libodes;
function dBoxBox(p1: TdVector3; R1: TdMatrix3; side1: TdVector3; p2: TdVector3; R2: TdMatrix3;
  side2: TdVector3; normal: TdVector3; depth: PdReal; return_code: Plongint; flags: longint;
  contact: PdContactGeom; skip: longint): longint; cdecl; external libodes;
procedure dInfiniteAABB(geom: TdGeomID; aabb: PdReal); cdecl; external libodes;

type
  TdGetAABBFn = procedure(para1: TdGeomID; aabb: PdReal); cdecl;
  TdColliderFn = function(o1: TdGeomID; o2: TdGeomID; flags: longint; contact: PdContactGeom; skip: longint): longint; cdecl;
  TdGetColliderFnFn = function(num: longint): TdColliderFn; cdecl;
  TdGeomDtorFn = procedure(o: TdGeomID); cdecl;
  TdAABBTestFn = function(o1: TdGeomID; o2: TdGeomID; aabb: PdReal): longint; cdecl;

  TdGeomClass = record
    bytes: longint;
    collider: TdGetColliderFnFn;
    aabb: TdGetAABBFn;
    aabb_test: TdAABBTestFn;
    dtor: TdGeomDtorFn;
  end;
  PdGeomClass = ^TdGeomClass;

function dCreateGeomClass(classptr: PdGeomClass): longint; cdecl; external libodes;
function dGeomGetClassData(para1: TdGeomID): pointer; cdecl; external libodes;
function dCreateGeom(classnum: longint): TdGeomID; cdecl; external libodes;
procedure dSetColliderOverride(i: longint; j: longint; fn: TdColliderFn); cdecl; external libodes;

// === Konventiert am: 30-4-26 17:10:11 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}



{$ENDIF read_implementation}
